c4prj2_input/grade.txt
Grading at Tue Oct  2 18:44:28 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:19:15: error: incompatible type for argument 1 of ‘add_card_to’
   add_card_to((fc->decks[index]), *ptr);
               ^
In file included from future.c:4:0:
deck.h:17:6: note: expected ‘deck_t * {aka struct deck_tag *}’ but argument is of type ‘deck_t {aka struct deck_tag}’
 void add_card_to(deck_t * deck, card_t c);
      ^
Compilation of future.c failed

Overall Grade: F
